# Centralized-Hazard-Detection-System-

./: .gitignore  BuzzerLED.cpp  BuzzerLEDTest.cpp  CO2Sensor.cpp  CO2Sensor.h  Client.cpp  Client.h  FanControl.cpp  NetworkQualityDetector.cpp  README.md  RouterIPDetector.cpp  Sensor-Example.cpp  Sensor.cpp  SensorReader.cpp  SensorReader.h  WifiManager.cpp  WifiManager.h  co2level.txt  connect_wifi.sh  lcd.cpp  lcd1602.c  main  main.cpp  server.cpp  test  test.cpp
BranchNode/CHDS_Branch/: settings.gradle.kts
BranchNode/CHDS_Branch/app/: build.gradle.kts
BranchNode/CHDS_Branch/app/src/main/: AndroidManifest.xml
BranchNode/CHDS_Branch/app/src/main/res/values/: strings.xml  (+1 more)
BranchNode/CHDS_Branch/gradle/wrapper/: gradle-wrapper.properties
CentralNode/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  TCPServer.cpp  TCPServer.h  ZoneHandler.cpp  ZoneHandler.h  main  main.cpp
CentralNode/GUI_HD/: .project  location.txt  message.txt  sensor_Test_limits.txt  sensor_data.txt  sensor_limits.txt
CentralNode/GUI_HD/src/: HDFrame.java  Main.java  SensorDataUpdater.java
EdgeNode/: CMakeLists.txt  Client.cpp  Client.h  EdgeNodeClient.cpp  Makefile  README.md  RPi LED_Buzzer.txt  SensorReader.cpp  SensorReader.h  main  main.cpp  network_info.txt
GUI_HD/src/: HDFrame.java
HazardDetectionGUI/: .project  SensorGUI.java  sensor_data.txt  sensor_limits.txt
Schematic_Diagrams/KiCad Schematic Files/: CentralNode.kicad_sch  EdgeNode.kicad_sch
UML Diagrams/: Sequence Diagram (Branch).txt  Sequence Diagram (Main Node).txt
UML_Diagrams/: Sequence Diagram (Edge Node).txt
(+6 files in other folders)
